test/nexj/invalidbase/messages/CircularInheritance_A.message
<Message base="CircularInheritance_D">
   <Parts>
      <Value name="a" type="string"/>
   </Parts>
</Message>
